# tauri-client

./: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
api/: Album.ts  ApiClient.ts  ApiResponse.ts  Artist.ts  Page.ts  Track.ts
src/: Player.ts  env.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: consts.rs  discord.rs  main.rs
src/screens/: AlbumScreen.ts  AlbumsScreen.ts  ArtistScreen.ts  ArtistsScreen.ts  ConnectingScreen.ts  MainScreen.ts  Screen.ts  ServerScreen.ts
